--- a/index.html
+++ b/index.html
@@ -100,7 +100,29 @@
   </header>
   <!-- main part start -->
   <main>
-    
+    <!-- categories part -->
+    <section class="container mt-5">
+      <div class="row g-4">
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="p-3 d-flex justify-content-between align-items-center bg-warning text-white rounded-3">
+            <h1>Watch</h1>
+            <img width="100px" src="images/categories/watch.png" alt="">
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="p-3 d-flex justify-content-between align-items-center bg-success text-white rounded-3">
+            <h1>Bag</h1>
+            <img width="100px" src="images/categories/bag.png" alt="">
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="p-3 d-flex justify-content-between align-items-center bg-primary text-white rounded-3">
+            <h1>Shoes</h1>
+            <img width="100px" src="images/categories/shoes.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <!-- footer part start -->
   <footer>
