--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   <title>Panda Commerce</title>
   <!-- bootstrap css stylesheet -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <!-- custome styles -->
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <!-- header start -->
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container bg-light py-3">
         <a class="navbar-brand" href="#">
           <img src="images/logo.png" alt="" width="185px" height="31px">
